Closed Bug 1325253 Opened 9 years ago Closed 9 years ago

Crash in mozilla::dom::HTMLMediaElement::NotifyAudioPlaybackChanged

Categories

(Core :: Audio/Video: Playback, defect, P1)

x86
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox51 --- unaffected
firefox52 --- fixed
firefox53 --- unaffected

People

(Reporter: jchen, Assigned: alwu)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file, 1 obsolete file)

This bug was filed from the Socorro interface and is report bp-c23b0fb0-bdb7-4dea-ac0b-f3d262161221. ============================================================= There has been a large number of this crash starting with the 12-20 Aurora build (the previous bug, bug 1315521, was closed a month ago). Alastor, do you think this is a regression from bug 1320005, which was uplifted to Aurora in the 12-20 build?
Flags: needinfo?(alwu)
Yes, it's a regression from bug 1320005, and I'm debugging now.
Assignee: nobody → alwu
Hi, Baku, Could you help me review this patch? This patch is for aurora-only, because this crash doesn't happen on present Nightly after bug1309162. Thanks!
Flags: needinfo?(alwu)
Attachment #8821047 - Flags: review?(amarchesini)
re-upload the patch.
Attachment #8821047 - Attachment is obsolete: true
Attachment #8821047 - Flags: review?(amarchesini)
Attachment #8821050 - Flags: review?(amarchesini)
Attachment #8821050 - Flags: review?(amarchesini) → review+
Comment on attachment 8821050 [details] [diff] [review] Bug 1325253 - notify audible state only when agent exists. (aurora) Approval Request Comment [Feature/Bug causing the regression]: Fix the crash [User impact if declined]: Browser would crash [Is this code covered by automated tests?]: Yes [Has the fix been verified in Nightly?]: Yes, it doesn't happen on Nightly, only on Aurora [Needs manual test from QE? If yes, steps to reproduce]: No [List of other uplifts needed for the feature/fix]: No [Is the change risky?]: No [Why is the change risky/not risky?]: The change is to avoid calling dangling pointer [String changes made/needed]: No
Attachment #8821050 - Flags: approval-mozilla-aurora?
Comment on attachment 8821050 [details] [diff] [review] Bug 1325253 - notify audible state only when agent exists. (aurora) fix media crash/regression in aurora52
Attachment #8821050 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
qe-verify- per Comment 6
Flags: qe-verify-
(In reply to Andrei Vaida, QA [:avaida] – please ni? me from comment #9) > qe-verify- per Comment 6 Could you elaborate it more? "qe-verify-" is due to comment6?
Flags: needinfo?(andrei.vaida)
(In reply to Blake Wu [:bwu][:blakewu] from comment #10) > (In reply to Andrei Vaida, QA [:avaida] – please ni? me from comment #9) > > qe-verify- per Comment 6 > Could you elaborate it more? "qe-verify-" is due to comment6? The "qe-verify" flag is used to show whether a bug needs manual testing. Manual testing is not required for this specific fix, according to Comment 6: > [Needs manual test from QE? If yes, steps to reproduce]: No
Flags: needinfo?(andrei.vaida)
Ah, I see. Thanks.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: