Bug 1325253 - Notify audible state only when agent exists. r=baku, a=jcristau

The old logic is wrong, it would reach the line NotifyStartedAudible() when
mAudioChannelAgent is nullptr.