dom/html/HTMLMediaElement.cpp
@@ -6581,17 +6581,15 @@ HTMLMediaElement::SetAudibleState(bool aAudible)
 void
 HTMLMediaElement::NotifyAudioPlaybackChanged(AudibleChangedReasons aReason)
 {
-  if (MaybeCreateAudioChannelAgent() &&
-      !mAudioChannelAgent->IsPlayingStarted()) {
-    return;
-  }
-
   if (mAudible == IsAudible()) {
     return;
   }
 
   mAudible = IsAudible();
-  mAudioChannelAgent->NotifyStartedAudible(mAudible, aReason);
+
+  if (mAudioChannelAgent && mAudioChannelAgent->IsPlayingStarted()) {
+    mAudioChannelAgent->NotifyStartedAudible(mAudible, aReason);
+  }
 }
 
 AudibleState
